--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -217,8 +217,11 @@
 .markdown p {
   margin: 0.5rem 0;
 }
-.markdown li {
+.markdown ul li {
   list-style: disc;
+}
+.markdown ol li {
+  list-style: decimal;
 }
 .markdown ol,
 .markdown ul {
